--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,18 @@ a {
 .landing-page {
   display: flex;
   height: 100vh;
+  position: relative;
+}
+
+.titolo {
+  position: absolute;
+  top: 25px;
+  left: 50%;
+  transform: translate(-50%);
+  font-size: 6.5rem;
+  font-family: 'Cormorant Garamond', serif;
+  color: #d73641;
+  text-shadow: 7px 4px 0px #530202;
 }
 
 /* ASIDE */
@@ -64,7 +76,8 @@ aside {
   writing-mode: vertical-lr;
   transform: rotate(180deg);
   font-size: 1.5rem;
-  color: rgba(40, 40, 40, 0.8);
+  /* color: rgba(40, 40, 40, 0.8); */
+  color: #e3e3e3;
   margin-bottom: 95px;
 }
 
@@ -87,6 +100,16 @@ aside {
   background-color: #282727;
   color: #e3e3e3;
   padding: 0 170px;
-  padding-top: 250px;
-  font-size: 1.4rem;
+  padding-top: 200px;
+  font-size: 1.3rem;
+  font-family: 'Playfair Display', serif;
+  overflow: auto;
+}
+
+
+
+/* PHOTO GALLERY */
+
+.photo-gallery {
+  
 }
