--- a/css/styles.css
+++ b/css/styles.css
@@ -158,11 +158,12 @@ aside {
   padding: 10px;
 }
 .card {
-  border: 1px solid black;
-  border-top-left-radius: 15px;
+  /* border: 1px solid black; */
+  /* border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px;
+  border-bottom-left-radius: 5px; */
+  border-radius: 10px;
   overflow: hidden;
   box-shadow: 5px 3px 10px 0px black;
 }
@@ -214,10 +215,82 @@ aside {
 .articolo-container h3 {
   color: white;
   font-size: 2.5rem;
+  margin-bottom: 10px;
 }
 
 iframe {
   width: 100%;
   height: calc(100vh - 250px);
   padding: 10px 0;
+}
+
+
+/* MOBILE RESPONSIVE */
+
+@media (max-width: 768px) {
+
+  .titolo {
+    font-size: 4.5rem;
+    top: 125px;
+  }
+
+  .landing-page {
+    flex-direction: column;
+    height: 100%;
+  }
+
+  aside {
+    width: 100%;
+    height: 80px;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 5px;
+  }
+
+  .socials {
+    flex-direction: row;
+  }
+
+  .socials i {
+    padding: 0 5px;
+  }
+
+  .email {
+    writing-mode: horizontal-tb;
+    transform: rotate(0);
+    margin: 0;
+    font-size: 1.1rem;
+  }
+
+
+  .hero-photo {
+    width: 100%;
+  }
+
+  .bio {
+    width: 100%;
+  }
+
+  .bio-container {
+    margin: 25px 0;
+    padding: 0 45px;
+    font-size: 1.2rem;
+  }
+
+  .card-container {
+    width: 100%
+  }
+
+  .articoli {
+    height: 100%;
+  }
+
+  .press-container {
+    flex-direction: column;
+  }
+
+  .articolo-container {
+    width: 85%;
+    margin: 15px auto;
+  }
 }
